sass/includes/_record-details.scss
.record-details {
    &__table {
        width: 100%;
        margin: 1rem 0 5rem;
        border-top: 1px dotted $color__grey-400;
        border-bottom: 1px dotted $color__grey-400;

        th,
        td {
            padding: 0.75em;
            vertical-align: top;
        }

        tr:nth-child(odd) {
            background-color: $color__grey-300;
        }

        th {
            font-weight: bold;
        }
    }

    &__related-tags {
        margin: 1rem 0 5rem;
        border: 1px solid $color__grey-500;
        padding: 1.5rem;

        &-list {
            dt {
                margin-top: 1.5rem;
                margin-bottom: 1rem;

                &:first-child {
                    margin-top: 0;
                }
            }

            dd {
                margin-bottom: 1rem;
                margin-left: 0;

                &:last-child {
                    margin-bottom: 0;
                }
            }
        }
    }
}

